--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title>Hello</title>
+  <title>BIG Hello</title>
 </head>
 <body>
-  <p>Helo World!</p>
+  <p>Hello World!</p>
 </body>
 </html>
